compiler/tests/safety/fail/mul0.jazz
// Simple checks that lower bits of multiplications are computed.
export fn addNumber() {
  reg u64 r;
  reg u64 A B;

  A = 2;
  B = 22;

  _,_,_,_,_,_,r = #IMUL_64  (A, B);

  if (r != 42){
     while (true) { A = 1; }
  }
}